--- a/ZN.Dotnet.Tools/ZN.Dotnet.Tools.csproj
+++ b/ZN.Dotnet.Tools/ZN.Dotnet.Tools.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsyncCoordinator.cs" />
+    <Compile Include="CoordinationStatus.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
